--- a/front_end/ait-crud-articles/src/index.css
+++ b/front_end/ait-crud-articles/src/index.css
@@ -1,33 +1,21 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: white;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: white;
 }
 
 body {
   margin: 0;
-  display: flex;
+  display: grid;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+
 }
 
 h1 {
@@ -35,23 +23,18 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+#id_contain_import {
+  display: flex;
+  justify-content: end;
 }
+#content-id-description {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 3%;
+}
+
 button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border-color: #8388ec;
 }
 
 @media (prefers-color-scheme: light) {
@@ -65,4 +48,15 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+
+
 }
+@media only screen and (max-width: 600px)  {
+  #content-id-description {
+    display: block;
+    justify-content: center;
+    margin-bottom: 3%;
+  }
+  
+}
+
